Fix additional styling issues, stemming from nav z-index

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,24 +28,22 @@ p {
 //----------------------------------------------------------------------
 
 header {
-  position: fixed;
-  z-index: 1;
   width: 100%;
   background-color: #100e17;
   nav {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     #nav-title {
       grid-column: 1;
     }
     #nav-blog {
-      grid-column: 5;
+      grid-column: 4;
     }
     #nav-me {
-      grid-column: 6;
+      grid-column: 5;
     }
     a {
-      height: 8vh;
+      height: 65px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -61,12 +59,9 @@ header {
 // MAIN
 //----------------------------------------------------------------------
 main {
-  box-sizing: border-box;
-  min-height: 70vh;
   width: 60vw;
   margin: 0 auto;
   background-color:#f9f9f9;
-  padding: 8vh 0 15vh 0;
 }
 
 a {
@@ -80,6 +75,7 @@ a {
 .heroBanner {
   display: flex;
   height: 30vh;
+  min-height: 300px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -129,9 +125,11 @@ a {
 }
 
 .blogIntro {
-  padding-top: 4vh;
+  display: flex;
+  align-items: center;
   font-weight: normal;
-  margin-bottom: 5vh;
+  height: 10vh;
+  min-height: 140px;
 }
 
 .aboutMe {
@@ -213,8 +211,7 @@ article {
 // FOOTER
 //----------------------------------------------------------------------
 footer {
-  height: 20vh;
-  border-top: 1px solid #100e17;
+  height: 180px;
   width: 60vw;
   margin: 0 auto;
   display: grid;
@@ -226,6 +223,7 @@ footer {
   a {
     color: rgb(100, 58, 184);
   }
+  white-space: pre-wrap;
   .icon-link {
     margin: 0;
     padding: 0;
@@ -388,6 +386,8 @@ button:hover {
 @media (max-width: 480px) {
   header {
     bottom: 0px;
+    position: fixed;
+    z-index: 1;
     background-color: #100e17;
     nav {
       display: grid;
@@ -405,13 +405,6 @@ button:hover {
         font-size: 1.3rem;
       }
     }
-  }
-  main {
-    padding: 2.5vh 5vw 0 5vw;
-    margin: 0;
-    min-height: 50vh;
-    width: 100vw;
-    margin-bottom: 10vh;
   }
   .latestPosts,
   .heroCaption,
